Fixed spacings in experience section.

--- a/src/assets/stylesheets/pages/cv/experience.less
+++ b/src/assets/stylesheets/pages/cv/experience.less
@@ -6,6 +6,7 @@
     &-item {
       &--block {
         flex-grow: 1;
+        margin-bottom: 20px;
       }
 
       &--company {
